<resources>
    <string name="app_name">StateFarm Fit</string>
    <string name="log_in">Log in</string>
    <string name="state_farm_fit">State Farm Fit</string>
    <string name="onboarding_welcome_text_1">Bet on yourself, achieve your goals, win your money back and more.</string>
    <string name="on_borading_desc_title_1">HEY RUNNER</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="get_started_bottom_sheet_text_1">Welcome to State Farm Fit. First thing first log in or sign up so that we can begin.</string>
    <string name="phone_number_login_text">Continue with Phone number</string>
    <string name="continue_with_google_login">Continue with Google</string>
    <string name="continue_with_facebook_login">Continue with Facebook</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="register_title">REGISTER</string>
    <string name="email">Email: </string>
    <string name="phone">Phone: </string>
    <string name="street">Street: </string>
    <string name="city">City: </string>
    <string name="zip">Zip: </string>
    <string name="heartbeat_rate">--</string>
    <string name="calories_burnt">--</string>
    <string name="sleep_hours">--</string>
    <string name="weight_lb">--</string>
    <string name="current_date">2020/01/21</string>
    <string name="messageHeartRateInfo">As per the American Heart Association (AHA), if you are an adult, your heart rate should be in the range of 60 to 100 beats per minute.
        And if your age is between 6 and 15 years, your heart rate should be anywhere between 70 and 100 per minute.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_page">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
